--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.AllergenAlertNew"
         tools:targetApi="31">
         <activity
-            android:name=".Settings"
+            android:name=".Results"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
